# git-changes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  sanity.yaml
src/: error.rs  git.rs  lib.rs  processor.rs  types.rs
tests/: integration_test.rs
