[package]
name = "git-changes"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to detect and process file changes in Git repositories for CI environments"
authors = ["Elad Kaplan <kaplan.elad@gmail.com>"]
license = "MIT"

[lib]
name = "git_changes"
path = "src/lib.rs"

[[bin]]
name = "git-changes"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["clap", "tokio"]

[dependencies]
thiserror = { version = "2.0.12" }
tree-fs = { version = "0.3" }
fs_extra = { version = "1.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional CLI dependencies
clap = { version = "4.4", features = ["derive"], optional = true }
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
], optional = true }
# Serialization (for potential API usage)
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.114" }
